--- a/ay.html
+++ b/ay.html
@@ -6,6 +6,7 @@
     <h4>I am going to be teaching you how to use git </h4>
     <h3>First of all, git is a version control system used to code management.</h3>
     <h5>github is the most popular remote server used by git users</h5>
+    <p>I just saw you updates, i would add mine very soon</p>
 <table>
 </table>
 </body>
